@@ -2,6 +2,7 @@ git-annex (0.14) UNRELEASED; urgency=low
 
   * Bugfix to git annex unused in a repository with nothing yet annexed.
   * Support upgrading from a v0 annex with nothing in it.
+  * Avoid multiple calls to git ls-files when passed eg, "*".
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Dec 2010 14:54:49 -0400
 
